add user post listing & view listings
